--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ nav:
   - 阅读: reading.md
   - 记忆碎片: memories.md
 
+# 左下角的版权声明
+copyright: Copyright &copy; 2026 AquaCodr/All Rights Reserved. 
+
 # 额外配置
 extra:
   generator: true
